Add excel file with detailed stats

--- a/FetalHeartRate.ipynb
+++ b/FetalHeartRate.ipynb
@@ -41,7 +41,7 @@
     "matlab_directory = os.path.join(data_directory, 'ctg_workshop_database')\n",
     "\n",
     "# dans l'électrocardiogramme, nous avons 4 mesures par seconde\n",
-    "# chaque mesure correspondent à au nombre de battements de coeurs par minute\n",
+    "# chaque mesure correspond au nombre de battements de coeurs par minute\n",
     "elements_en_1s = 4\n",
     "elements_en_1minute = int(elements_en_1s*60)\n",
     "elements_en_5minutes = 5*elements_en_1minute\n",
@@ -238,6 +238,9 @@
     "\n",
     "\n",
     "controversials = [27,81,267,274,192,26,153,126,8,161,298,270,67,167,188,210,185,214,172,135,109,196,79,105,297,104,69,21,64,233,90,211,175,248,78,98,180,139,205,217,22,272,12,250,46,283,103,57,150,91,289,164,290,5,291,110,59,295,68,224,232,284,70,87,124,244,17,71,123,241,213,39,49,268,173,234,2,166,56,294,247,170,41,33,243,181,171,235,102,145,108,97,92,34,133,147,251,230,117,249,252,197,203,43,269,25,245,121,281,207,138,242,220,201,20,144,143,101,44,106,263,278,28,200,114,184,76,218,16,276,149,53,14,47,141,125,48,221,193,165,115,52,31,191,199,253,37,186,187,51,288,163,179,38,282,183,219,287,177,174,18,254,42,99,95,258,122,132,209,24,130,169,32,96,131,4,212,231,190,29,93,137,157,120,72,206,62,286,127,277,74,256,225,146,222,86,178,236,19,158,65,259,89,208,168,77,140,257,154,50,7,40,118,58,264,299,54,237,204,36,195,61,94,84,119,266,260,1,85,189,226,45,128,134,142,113,9,83,116,279,35,162,159,112,275,88,55,156,223,100,296,280,80,246,215,271,229,107,160,152,202,111,63,82,30,60,194,273,300,75,176,15,292,265,227,293,262,148,151,136,239,73,182,66,129,238,3,261,23,6,216,13,155,228,255,198,285,10,11,240]\n",
+    "\n",
+    "# to_remove_count[0] : number of elements to remove with target == 0\n",
+    "# to_remove_count[1] : number of elements to remove with target == 1\n",
     "to_remove_count = [int(percentage_controversial_to_discard*list(id_to_target.values()).count(0)), int(percentage_controversial_to_discard*list(id_to_target.values()).count(1))]\n",
     "\n",
     "#we discard controversial data (with possible invalid label)\n",
@@ -252,14 +255,6 @@
     "print(f'Dataset after removing {round(100*percentage_controversial_to_discard,1)}% of most controversials elements:')\n",
     "print(f'\\t{create_dataset_stats(id_to_fhr_last_hour)}')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "487bf5dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -943,7 +938,7 @@
    "outputs": [],
    "source": [
     "# l'étudiant devra remplacer le 10 ci dessous\n",
-    "seuil_ecart_type = 23\n",
+    "seuil_ecart_type = 10\n",
     "\n",
     "config = {'caracteristiques_a_utiliser': '1', 'seuil_1': seuil_ecart_type}\n",
     "metrics = train(config, False)\n",
@@ -1034,7 +1029,8 @@
    "id": "f8772350",
    "metadata": {},
    "source": [
-    "# On demande à l'étudiant de choisir la valeur de ces 2 caractéristiques"
+    "# On demande à l'étudiant de choisir la valeur de ces 2 caractéristiques\n",
+    "## On considère qu'un sujet est malade si l'étendue est supérieure au seuil indiqué ou si l'écart type est supérieur au seuil associé"
    ]
   },
   {
@@ -1049,6 +1045,7 @@
     "seuil_ecart_type = 10\n",
     "seuil_etendue = 100\n",
     "\n",
+    "\n",
     "config = {'caracteristiques_a_utiliser': '1+3', 'seuil_1': seuil_ecart_type, 'seuil_3': seuil_etendue,'label_si_resultats_differents': 1}\n",
     "metrics = train(config, False)\n",
     "print(f\"Erreur obtenue: {round(100*metrics['erreur'],1)}%\")\n"
@@ -1057,7 +1054,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1071,7 +1068,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
