--- a/FetalHeartRate.ipynb
+++ b/FetalHeartRate.ipynb
@@ -71,6 +71,22 @@
     "    total_points_in_interval = np.count_nonzero((fhr > min_value) & (fhr < max_value) )\n",
     "    return total_points_in_interval/total_points\n",
     "\n",
+    "def points_in_interval_old(fhr, min_value: float, max_value: float) -> int:\n",
+    "    '''\n",
+    "    total_points = np.count_nonzero(~np.isnan(fhr))\n",
+    "    if total_points<=0:\n",
+    "        return 0\n",
+    "    '''\n",
+    "    total_points_in_interval = np.count_nonzero((fhr > min_value) & (fhr < max_value) )\n",
+    "    #return total_points_in_interval/total_points\n",
+    "    return total_points_in_interval\n",
+    "\n",
+    "\n",
+    "def points_in_interval(fhr, min_value: float, max_value: float) -> int:\n",
+    "    return int(proportion_in_interval(fhr, min_value, max_value)*len(fhr))\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# calcul des 3 quartiles Q1 , Q2 (=mediane), Q3 (en ignorant les NaN)\n",
     "def compute_quartiles_Q1_Q2_Q3(fhr) -> Tuple[float,float,float]:\n",
@@ -169,6 +185,7 @@
     "etendue_last_hour = []\n",
     "percent_around_mean_last_hour = []\n",
     "percent_around_median_last_hour = []\n",
+    "percent_over_80_last_hour = []\n",
     "\n",
     "for id in list(id_to_fhr_last_hour.keys()):\n",
     "    ids.append(id)\n",
@@ -188,6 +205,7 @@
     "    percent_around_mean_last_hour.append(proportion_in_interval(fhr_last_hour, mean-32.8, mean+32.8))\n",
     "    median = mediane(fhr_last_hour)\n",
     "    percent_around_median_last_hour.append(proportion_in_interval(fhr_last_hour, median-31.8, median+31.8))\n",
+    "    percent_over_80_last_hour.append(proportion_in_interval(fhr_last_hour, 80, 9999))\n",
     "\n",
     "    \n",
     "# Sauvegarde de ces statistiques dans un DataFrame\n",
@@ -205,6 +223,7 @@
     "    'etendue_last_hour' : etendue_last_hour,\n",
     "    'percent_around_mean_last_hour' : percent_around_mean_last_hour,\n",
     "    'percent_around_median_last_hour' : percent_around_median_last_hour,\n",
+    "    'percent_over_80_last_hour' :  percent_over_80_last_hour,\n",
     "    })\n",
     "\n",
     "# on sauvegarde ces stats sur le disque\n",
@@ -226,18 +245,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# percentage of controversial elements to discard    \n",
-    "# for instance:\n",
-    "#   0.1 means that the 10% of most controversial elements will be discarded\n",
-    "#   0.0 means that no controverisal elements will be discarded\n",
-    "\n",
-    "percentage_controversial_to_discard = 1/6\n",
-    "\n",
     "print(f'Initial dataset before removing any controversials elements:')\n",
     "print(f'\\t{create_dataset_stats(id_to_fhr_last_hour)}')\n",
     "\n",
     "\n",
+    "# pour étendue + std dev\n",
     "controversials = [27,81,267,274,192,26,153,126,8,161,298,270,67,167,188,210,185,214,172,135,109,196,79,105,297,104,69,21,64,233,90,211,175,248,78,98,180,139,205,217,22,272,12,250,46,283,103,57,150,91,289,164,290,5,291,110,59,295,68,224,232,284,70,87,124,244,17,71,123,241,213,39,49,268,173,234,2,166,56,294,247,170,41,33,243,181,171,235,102,145,108,97,92,34,133,147,251,230,117,249,252,197,203,43,269,25,245,121,281,207,138,242,220,201,20,144,143,101,44,106,263,278,28,200,114,184,76,218,16,276,149,53,14,47,141,125,48,221,193,165,115,52,31,191,199,253,37,186,187,51,288,163,179,38,282,183,219,287,177,174,18,254,42,99,95,258,122,132,209,24,130,169,32,96,131,4,212,231,190,29,93,137,157,120,72,206,62,286,127,277,74,256,225,146,222,86,178,236,19,158,65,259,89,208,168,77,140,257,154,50,7,40,118,58,264,299,54,237,204,36,195,61,94,84,119,266,260,1,85,189,226,45,128,134,142,113,9,83,116,279,35,162,159,112,275,88,55,156,223,100,296,280,80,246,215,271,229,107,160,152,202,111,63,82,30,60,194,273,300,75,176,15,292,265,227,293,262,148,151,136,239,73,182,66,129,238,3,261,23,6,216,13,155,228,255,198,285,10,11,240]\n",
+    "\n",
+    "# percentage of controversial elements to discard    \n",
+    "# for instance:\n",
+    "#   0.1 means that the 10% of most controversial elements will be discarded\n",
+    "#   0.0 means that no controverisal elements will be discarded\n",
+    "percentage_controversial_to_discard = 1/6\n",
+    "\n",
     "\n",
     "# to_remove_count[0] : number of elements to remove with target == 0\n",
     "# to_remove_count[1] : number of elements to remove with target == 1\n",
@@ -253,7 +273,27 @@
     "        del id_to_fhr_last_hour[id]\n",
     "\n",
     "print(f'Dataset after removing {round(100*percentage_controversial_to_discard,1)}% of most controversials elements:')\n",
-    "print(f'\\t{create_dataset_stats(id_to_fhr_last_hour)}')\n"
+    "print(f'\\t{create_dataset_stats(id_to_fhr_last_hour)}')\n",
+    "\n",
+    "\n",
+    "# percentage of controversial elements to change labels\n",
+    "# for instance:\n",
+    "#   0.1 means that the 10% most controversial elements will have their label changeed\n",
+    "#   0.0 means that we do not change the label\n",
+    "percentage_controversial_to_change_label = 0.0\n",
+    "\n",
+    "#we change controversial labels\n",
+    "to_change_label_count = int(percentage_controversial_to_change_label*len(id_to_target)/2)\n",
+    "#we discard controversial data (with possible invalid label)\n",
+    "for id in controversials:\n",
+    "    if id in id_to_fhr_last_hour and to_change_label_count > 0 :\n",
+    "        to_change_label_count -= 1\n",
+    "        id_to_target[id] = 1-id_to_target[id]\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "print(f'Dataset after changing labels of {round(100*percentage_controversial_to_change_label,1)}% of most controversials elements:')\n",
+    "print(f'\\t{create_dataset_stats(id_to_fhr_last_hour)}')"
    ]
   },
   {
@@ -448,6 +488,10 @@
     "def proportion_in_interval_last_hour(id: int, min_value: float, max_value: float) -> float:\n",
     "    return proportion_in_interval(id_to_fhr_last_hour[id], min_value, max_value)\n",
     "\n",
+    "@functools.lru_cache(maxsize=None)\n",
+    "def points_in_interval_last_hour(id: int, min_value: float, max_value: float) -> int:\n",
+    "    return points_in_interval(id_to_fhr_last_hour[id], min_value, max_value)\n",
+    "\n",
     "# calcul de l'écart type\n",
     "@functools.lru_cache(maxsize=None)\n",
     "def compute_id_std_dev_last_hour(id: int):\n",
@@ -482,11 +526,78 @@
     "def compute_id_mean_last_hour(id: int):\n",
     "    return moyenne(id_to_fhr_last_hour[id])\n",
     "\n",
-    "# 4eme caracteristique: sujet sain si le pourcentage de points autour de la moyenne est supérieur à un seuil.\n",
+    "\n",
+    "\n",
+    "# caracteristique 4: sujet sain si le pourcentage de points autour de la moyenne est supérieur à un seuil.\n",
     "def calcul_caracteristique4(id: int, hyperparameters: dict, suffix: str) -> int:\n",
-    "    range = hyperparameters['range_'+suffix]\n",
+    "    range4 = hyperparameters['range_'+suffix]\n",
     "    moyenne = compute_id_mean_last_hour(id)\n",
-    "    return 0 if proportion_in_interval_last_hour(id, moyenne-range, moyenne+range) > hyperparameters['seuil_'+suffix] else 1\n",
+    "    return 0 if proportion_in_interval_last_hour(id, moyenne-range4, moyenne+range4) > hyperparameters['seuil_'+suffix] else 1\n",
+    "\n",
+    "\n",
+    "\n",
+    "# caracteristique 5: sujet sain si le pourcentage de points autour de la médiane est supérieur à un seuil.\n",
+    "def calcul_caracteristique5(id: int, hyperparameters: dict, suffix: str) -> int:\n",
+    "    range_5 = hyperparameters['range_'+suffix]\n",
+    "    median = compute_id_mean_last_hour(id)\n",
+    "    return 0 if proportion_in_interval_last_hour(id, median-range_5, median+range_5) > hyperparameters['seuil_'+suffix] else 1\n",
+    "\n",
+    "\n",
+    "\n",
+    "# caracteristique 6: sujet sain si le pourcentage de points dans un intervalle [min_range_6, +infini] est supérieur à un seuil\n",
+    "def calcul_caracteristique6(id: int, hyperparameters: dict, suffix: str) -> int:\n",
+    "    return 0 if proportion_in_interval_last_hour(id, hyperparameters['min_range_'+suffix], 999) > hyperparameters['seuil_'+suffix] else 1\n",
+    "\n",
+    "# caracteristique 6A: sujet sain si le nombre de points dans un intervalle [min_range_6A, +infini] est supérieur à un seuil\n",
+    "def calcul_caracteristique6A(id: int, hyperparameters: dict, suffix: str) -> int:\n",
+    "    return 0 if points_in_interval_last_hour(id, hyperparameters['min_range_'+suffix], 999) > hyperparameters['seuil_'+suffix] else 1\n",
+    "\n",
+    "# caracteristique 6C: sujet sain si le pourcentage de points dans un intervalle [mean - range_6C, +infini] est supérieur à un seuil\n",
+    "def calcul_caracteristique6C(id: int, hyperparameters: dict, suffix: str) -> int:\n",
+    "    mean = compute_id_mean_last_hour(id)\n",
+    "    return 0 if proportion_in_interval_last_hour(id, mean-hyperparameters['range_'+suffix], 999) > hyperparameters['seuil_'+suffix] else 1\n",
+    "        \n",
+    "\n",
+    "\n",
+    "# caracteristique 7: sujet sain si le pourcentage de points dans un intervalle [min_range_7, min_range_7+range_7] est supérieur à un seuil\n",
+    "def calcul_caracteristique7(id: int, hyperparameters: dict, suffix: str) -> int:\n",
+    "    min_range = hyperparameters['min_range_'+suffix]\n",
+    "    max_range = min_range+hyperparameters['range_'+suffix]\n",
+    "    return 0 if proportion_in_interval_last_hour(id, min_range, max_range) > hyperparameters['seuil_'+suffix] else 1\n",
+    "\n",
+    "# caracteristique 7A: sujet sain si le nombre de points dans un intervalle [min_range_7A, min_range_7A+range_7A] est supérieur à un seuil\n",
+    "def calcul_caracteristique7A(id: int, hyperparameters: dict, suffix: str) -> int:\n",
+    "    min_range = hyperparameters['min_range_'+suffix]\n",
+    "    max_range = min_range+hyperparameters['range_'+suffix]\n",
+    "    return 0 if points_in_interval_last_hour(id, min_range, max_range) > hyperparameters['seuil_'+suffix] else 1\n",
+    "\n",
+    "# caracteristique 7C: sujet sain si le pourcentage de points dans un intervalle [mean-min_range_7C, mean+max_range_7C] centré autour de la moyenne est supérieur à un seuil\n",
+    "def calcul_caracteristique7C(id: int, hyperparameters: dict, suffix: str) -> int:\n",
+    "    min_range_7C = hyperparameters['min_range_'+suffix]\n",
+    "    max_range_7C = hyperparameters['max_range_'+suffix]\n",
+    "    mean = compute_id_mean_last_hour(id)\n",
+    "    return 0 if proportion_in_interval_last_hour(id, mean-min_range_7C, mean+max_range_7C) > hyperparameters['seuil_'+suffix] else 1\n",
+    "\n",
+    "# caracteristique 7D: sujet sain si le pourcentage de points dans un intervalle [mean-range_7D, mean+range_7D] centré autour de la moyenne est supérieur à un seuil\n",
+    "def calcul_caracteristique7D(id: int, hyperparameters: dict, suffix: str) -> int:\n",
+    "    range_7D = hyperparameters['range_'+suffix]\n",
+    "    mean = compute_id_mean_last_hour(id)\n",
+    "    return 0 if proportion_in_interval_last_hour(id, mean-range_7D, mean+range_7D) > hyperparameters['seuil_'+suffix] else 1\n",
+    "\n",
+    "\n",
+    "\n",
+    "# caracteristique 8: sujet sain si le pourcentage de points dans un intervalle [0, max_range_8] est supérier à un seuil\n",
+    "def calcul_caracteristique8(id: int, hyperparameters: dict, suffix: str) -> int:\n",
+    "    return 0 if proportion_in_interval_last_hour(id, 0, hyperparameters['max_range_'+suffix]) > hyperparameters['seuil_'+suffix] else 1\n",
+    "\n",
+    "# caracteristique 8A: sujet sain si le nombre de points dans un intervalle [0, max_range_8A] est supérieur à un seuil\n",
+    "def calcul_caracteristique8A(id: int, hyperparameters: dict, suffix: str) -> int:\n",
+    "    return 0 if points_in_interval_last_hour(id, 0, hyperparameters['max_range_'+suffix]) > hyperparameters['seuil_'+suffix] else 1\n",
+    "\n",
+    "# caracteristique 8C: sujet sain si le pourcentage de points dans un intervalle [0, mean + range_8C] est supérieur à un seuil\n",
+    "def calcul_caracteristique8C(id: int, hyperparameters: dict, suffix: str) -> int:\n",
+    "    mean = compute_id_mean_last_hour(id)\n",
+    "    return 0 if proportion_in_interval_last_hour(id, 0, mean+hyperparameters['range_'+suffix]) > hyperparameters['seuil_'+suffix] else 1\n",
     "\n",
     "\n",
     "\n",
@@ -494,12 +605,6 @@
     "@functools.lru_cache(maxsize=None)\n",
     "def compute_id_median_last_hour(id: int):\n",
     "    return mediane(id_to_fhr_last_hour[id])\n",
-    "\n",
-    "# 5eme caracteristique: sujet sain si le pourcentage de points autour de la médiane est supérieur à un seuil.\n",
-    "def calcul_caracteristique5(id: int, hyperparameters: dict, suffix: str) -> int:\n",
-    "    range = hyperparameters['range_'+suffix]\n",
-    "    median = compute_id_mean_last_hour(id)\n",
-    "    return 0 if proportion_in_interval_last_hour(id, median-range, median+range) > hyperparameters['seuil_'+suffix] else 1\n",
     "\n"
    ]
   },
@@ -516,7 +621,7 @@
    "execution_count": null,
    "id": "04040a0f",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -695,46 +800,98 @@
     "\n",
     "\n",
     "\n",
-    "search_space = {\n",
     "\n",
+    "search_space = {\n",
+    "    \n",
     "    # caracteristique 1: sujet sain si l'écart type est inférieur à un seuil.\n",
     "    'seuil_1': hp.choice('seuil_1', float_range(15.0, 30.0, 1000)),\n",
-    "    \n",
+    "\n",
     "    # caracteristique 2: sujet sain si l'écart interquartile est inférieur à un seuil\n",
     "    'seuil_2': hp.choice('seuil_2', float_range(15, 40.0, 1000)),\n",
     "\n",
     "    # caracteristique 3: sujet sain si l'étendue est inférieure à un seuil.\n",
-    "    'seuil_3': hp.choice('seuil_3', float_range(150,200, 100)),\n",
-    "    \n",
+    "    'seuil_3': hp.choice('seuil_3', int_range(120,250)),\n",
+    "\n",
     "    # caracteristique 4: sujet sain si le pourcentage de points autour de la moyenne est supérieur à un seuil.\n",
-    "    'range_4': hp.choice('range_4', float_range(10,50)),\n",
+    "    'range_4': hp.choice('range_4', int_range(10,50)),\n",
     "    'seuil_4': hp.choice('seuil_4', float_range(0.80, 0.99,100)),\n",
     "\n",
     "    # caracteristique 5: sujet sain si le pourcentage de points autour de la médiane est supérieur à un seuil.\n",
     "    'range_5': hp.choice('range_5', float_range(30,35)),\n",
     "    'seuil_5': hp.choice('seuil_5', float_range(0.80, 0.90)),\n",
     "\n",
-    "    'caracteristiques_a_utiliser': hp.choice('caracteristiques_a_utiliser', ['3']),\n",
+    "    \n",
+    "    # caracteristique 6: sujet sain si le pourcentage de points dans un intervalle [min_range_6, +infini] est supérieur à un seuil\n",
+    "    'min_range_6': hp.choice('min_range_6', int_range(50,100)),\n",
+    "    'seuil_6': hp.choice('seuil_6', float_range(0.8, 1.0)),\n",
+    "\n",
+    "    # caracteristique 6A: sujet sain si le nombre de points dans un intervalle [min_range_6A, +infini] est supérieur à un seuil\n",
+    "    'min_range_6A': hp.choice('min_range_6A', int_range(50, 100)),\n",
+    "    'seuil_6A': hp.choice('seuil_6A', int_range(int(0.8*14400), 14400)),\n",
+    "\n",
+    "    # caracteristique 6C: sujet sain si le pourcentage de points dans un intervalle [mean - range_6C, +infini] est supérieur à un seuil\n",
+    "    'range_6C': hp.choice('range_6C', int_range(0, 50)),\n",
+    "    'seuil_6C': hp.choice('seuil_6C', float_range(0.8, 1.0)),\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    # caracteristique 7: sujet sain si le pourcentage de points dans un intervalle [min_range_7, min_range_7+range_7] est supérieur à un seuil\n",
+    "    'min_range_7': hp.choice('min_range_7', int_range(50,150)),\n",
+    "    'range_7': hp.choice('range_7', int_range(100, 180)),\n",
+    "    'seuil_7': hp.choice('seuil_7', float_range(0.80, 1.0)),\n",
+    "\n",
+    "    # caracteristique 7A: sujet sain si le nombre de points dans un intervalle [min_range, max_range] est supérieur à un seuil\n",
+    "    'min_range_7A': hp.choice('min_range_7A', int_range(50,100)),\n",
+    "    'range_7A': hp.choice('range_7A', int_range(100, 180)),\n",
+    "    'seuil_7A': hp.choice('seuil_7A', int_range(int(0.8*14400), 14400)),\n",
+    "    \n",
+    "\n",
+    "    # caracteristique 7C: sujet sain si le pourcentage de points dans un intervalle [mean-min_range_7C, mean+max_range_7C] centré autour de la moyenne est supérieur à un seuil\n",
+    "    'min_range_7C': hp.choice('min_range_7C', int_range(0,50)),\n",
+    "    'max_range_7C': hp.choice('max_range_7C', int_range(0, 50)),\n",
+    "    'seuil_7C': hp.choice('seuil_7C', float_range(0.80, 1.0)),\n",
+    "\n",
+    "    \n",
+    "    # caracteristique 7D: sujet sain si le pourcentage de points dans un intervalle [mean-range_7D, mean+range_7D] centré autour de la moyenne est supérieur à un seuil\n",
+    "    'range_7D': hp.choice('range_7D', int_range(0,100)),\n",
+    "    'seuil_7D': hp.choice('seuil_7D', float_range(0.70, 1.0)),\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    # caracteristique 8: sujet sain si le pourcentage de points dans un intervalle [0, max_range_8] est supérier à un seuil\n",
+    "    'max_range_8': hp.choice('max_range_8', int_range(100,200)),\n",
+    "    'seuil_8': hp.choice('seuil_8', float_range(0.8, 1.0)),\n",
+    "\n",
+    "    \n",
+    "    # caracteristique 8A: sujet sain si le nombre de points dans un intervalle [0, max_range_8A] est supérieur à un seuil\n",
+    "    'max_range_8A': hp.choice('max_range_8A', int_range(130,230)),\n",
+    "    'seuil_8A': hp.choice('seuil_8A', int_range(int(0.8*14400), 14400)),\n",
+    "    \n",
+    "    # caracteristique 8C: sujet sain si le pourcentage de points dans un intervalle [0, mean + range_8C] est supérieur à un seuil\n",
+    "    'range_8C': hp.choice('range_8C', int_range(20,200)),\n",
+    "    'seuil_8C': hp.choice('seuil_8C', float_range(0.8, 1.0)),\n",
+    "\n",
+    "    #pour faire une recherche sur 2 caractéristiques en même temps, par exemple 3 et 6C\n",
+    "    #'caracteristiques_a_utiliser': hp.choice('caracteristiques_a_utiliser', ['3+6C']),\n",
+    "    \n",
+    "    #pour faire une recherche sur 1 seule caractéristique, par exemple 7A\n",
+    "    #'caracteristiques_a_utiliser': hp.choice('caracteristiques_a_utiliser', ['7A']),\n",
+    "\n",
+    "    \n",
+    "    'caracteristiques_a_utiliser': hp.choice('caracteristiques_a_utiliser', ['7A']),\n",
+    "    \n",
     "    'label_si_resultats_differents': hp.choice('label_si_resultats_differents', [0, 1]),\n",
     "}\n",
     "\n",
     "\n",
-    "if len(sys.argv) >=2 and str.isdigit(sys.argv[1][0]):\n",
-    "    caracteristiques_a_utiliser = sys.argv[1].split(',')\n",
-    "    print(f'caracteristiques_a_utiliser will be set to {caracteristiques_a_utiliser}')\n",
-    "    search_space['caracteristiques_a_utiliser'] =  hp.choice('caracteristiques_a_utiliser', caracteristiques_a_utiliser)\n",
     "\n",
-    "\n",
-    "max_evals = 200\n",
-    "if len(sys.argv) >=3 and str.isdigit(sys.argv[2]):\n",
-    "    print(f'max_evals will be set to {sys.argv[2]}')\n",
-    "    max_evals = int(sys.argv[2])\n",
+    "max_evals = 500\n",
     "print(f'max_evals value is {max_evals}')\n",
     "\n",
     "already_processed_model_names_with_hpo = dict()\n",
     "start_time = time.time()\n",
     "# Uncomment following line to enable HPO\n",
-    "#best = launch_hpo(max_evals)\n",
+    "best = launch_hpo(max_evals)\n",
     "print(f'hpo took {round(time.time()-start_time,2)}s')\n",
     "\n"
    ]
